# f06_whitepaper_writer

./: .gitignore  README.md  pyproject.toml
src/f06_whitepaper_writer/: main.py  t01_file_tool.py  test_01_file_writer_isolation.py
src/f06_whitepaper_writer/crews/: p01_config.py
src/f06_whitepaper_writer/crews/c01_research/: c01_research.py
src/f06_whitepaper_writer/crews/c01_research/config/: agents.yaml  tasks.yaml
src/f06_whitepaper_writer/crews/c02_crawler/: c02_crawler.py
src/f06_whitepaper_writer/crews/c02_crawler/config/: agents.yaml  tasks.yaml
src/f06_whitepaper_writer/crews/c03_scraper/: c03_scraper.py
src/f06_whitepaper_writer/crews/c03_scraper/config/: agents.yaml  tasks.yaml
