[project]
name = "f06_whitepaper_writer"
version = "0.1.0"
description = "f06_whitepaper_writer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0",
]

[project.scripts]
kickoff = "f06_whitepaper_writer.main:kickoff"
plot = "f06_whitepaper_writer.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
